--- a/_sass/0-settings/_color-scheme.scss
+++ b/_sass/0-settings/_color-scheme.scss
@@ -9,6 +9,7 @@
   --gray: #9e9e9e;
   --dark: #0c101a;
   --dark-blue: #1e2740;
+  --custom-color: #0659c5;
 
   --background-color: var(--white);
   --background-alt-color: var(--light-blue);
@@ -18,8 +19,9 @@
   
   --heading-font-color: var(--dark-blue);
 
-  --link-color: var(--dark-blue);
+  --link-color: var(--link-dark);
   --link-color-hover: var(--dark-blue);
+  --link-custom: var(--custom-color)
 
   --button-color: var(--white);
   --button-background-color: var(--brand-color);
